assets/sass/cds/_sections.scss
/* ... */
.accueil .section--featured-blogposts,
.home .section--featured-blogposts {
  background: $bg-grey;
  padding-bottom: 0;

  .post-header {
    display: flex;
    justify-content: space-between;

    @include mobile_only {
      text-align: center;
    }

    @include tablet {
      text-align: center;
    }

    @include desktop {
      text-align: left;
    }

    @media( max-width: 1220px) {
      display: inline-block;
    }

    .read-blogs {
      display: inline-block;
      padding-left: 15px;
    }

    h2 {
      margin-top: 0;

      @include mobile_only {
        text-align: center;
        margin-bottom: 5px;
      }

      @include tablet {
        text-align: center;
        margin-bottom: 5px;
      }

      @include desktop {
        text-align: left;
      }
    }
  }

  .blog-posts {
    @include tablet { margin-bottom: 3rem; }

    img {
      width: 50%;
    }

    .post {
      display: flex;
      flex-direction: column;
      background: $white;
      box-shadow: 3px 5px 5px $medium-grey;
      transition: all 0.3s ease-in-out;

      a {
        color: $black;
        padding: 1.5rem;
        padding-right: 5px;
        font-size: 1.50rem;
        font-weight: 900;
      }


      &:hover {
        box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
      }

      @include mobile_only { margin: 1.5rem auto; }
      @include tablet {
        height: 28rem;
        margin: 1rem 0;
      }

      .image {
        background-position: center center;
        background-size: cover;
        display: block;
        height: 15rem;
      }

      .text {
        padding: 1.5rem;
        flex-grow: 1;

        h3 {
          color: $black;
        }
      }

      .date {
        color: $section-bg-grey;
        font-size: 1.2rem;
        font-weight: 500;
        margin-top: 1rem;
      }

      h3 {
        font-weight: 500;
        font-size: 1.5rem;
        margin: 0;
        margin-top: 0.5rem;
      }
    }
  }
}

.post-content {
  margin-bottom: 45px;
}

////////////////////////////////////////////////////
//
// WHAT WE DO
//
////////////////////////////////////////////////////
////////////////////////////////////////////////////
//
// PRODUCT DASHBOARD
//
////////////////////////////////////////////////////

.row.equal {
  @include desktop {
    display: flex;
    margin-bottom: 2em;
  }
}

span.discovery,
span.discoveryfr {
  color: $discovery-color;
}
.border-discovery,
.border-discoveryfr {
  border-bottom: 10px solid $discovery-color;
}

span.alpha,
span.alphafr {
  color: $alpha-color;
}
.border-alpha,
.border-alphafr {
  border-bottom: 10px solid $alpha-color;
}

span.beta,
span.betafr {
  color: $beta-color;
}

.border-beta,
.border-betafr {
  border-bottom: 10px solid $beta-color;
}

span.live,
span.livefr {
  color: $live-color;
}

.border-live,
.border-livefr {
  border-bottom: 10px solid $live-color;
}

.work-in-progress--product-module {
  background-color: $white;
  margin-bottom: 2em;
  box-shadow: 5px 8px 5px $medium-grey;
  height: 100%;
  padding: 10px 10px 20px 10px;

  @include desktop {
    padding-bottom: 0;
  }

  .title-link {
    display: inline;
  }

  h3, h4,
  .title-link {
    font-weight: 500;
    margin: 12px 0;

    @include mobile_only {
      font-size: 2.4rem;
    }

    @include tablet {
      font-size: 2.6rem;
    }

    @include desktop {
      font-size: 3rem;
      margin-top: 20px;
    }
  }

  p, a {
    font-size: 1.85rem;
    display: inline-block;
  }

  a {
    text-decoration: underline;
    color: $black;

    &:hover {
      color: $dark-grey;
    }
  }

  h3.live::after,
  h3.livefr::after,
  h3.alpha::after,
  h3.alphafr::after,
  h3.discovery::after,
  h3.discoveryfr::after,
  h3.découvertefr::after,
  h3.beta::after,
  h3.betafr::after,
  h4.live::after,
  h4.livefr::after,
  h4.alpha::after,
  h4.alphafr::after,
  h4.discovery::after,
  h4.discoveryfr::after,
  h4.découvertefr::after,
  h4.beta::after,
  h4.betafr::after {
    display: inline-block;
    position: relative;
    bottom: 10px;
    color: #ffffff;
    margin-left: 0;
    margin-top: 10px;
    border-radius: 3px;
    font-size: 1.2rem;
    text-transform: uppercase;

    @include mobile_only {
      padding: 3px 6.5px 2px 6.5px;
      bottom: 5px;
    }

    @include tablet {
      padding: 5px 6.5px 4px 6.5px;
    }

    @include desktop {
      padding: 5px 6.5px 4px 6.5px;
    }
  }

  h3.live::after,
  h3.livefr::after,
  h4.live::after,
  h4.livefr::after {
    background-color: $live-color;
  }

  h3.live::after,
  h4.live::after {
    content: "Live";
  }

  h3.livefr::after,
  h4.livefr::after {
    content: "En ligne";
  }

  h3.alpha::after,
  h3.alphafr::after,
  h4.alpha::after,
  h4.alphafr::after {
    content: "Alpha";
    background-color: $alpha-color;
  }

  h3.discovery::after,
  h3.discoveryfr::after,
  h3.découvertefr::after,
  h4.discovery::after,
  h4.discoveryfr::after,
  h4.découvertefr::after {
    background-color: $discovery-color;
  }

  h3.discovery::after,
  h4.discovery::after {
    content: "Discovery";
  }
  h3.découvertefr::after,
  h3.discoveryfr::after,
  h4.découvertefr::after,
  h4.discoveryfr::after {
    content: "Découverte";
  }

  h3.beta::after,
  h3.betafr::after,
  h4.beta::after,
  h4.betafr::after {
    background-color: $beta-color;
  }

  h3.beta::after,
  h4.beta::after {
    content: "Beta";
  }

  h3.betafr::after,
  h4.betafr::after {
    content: "Bêta";
  }

  h1,
  h2,
  h4 {
    color: #000000;
  }

  p { margin-bottom: 0px; }
}

.work-in-progress--platform-module {
  padding: 10px;
}

.work-in-progress--product-summary {
  padding-top: 0px;
  padding-bottom: 0px;
  margin-bottom: 10px;

  p {
    margin: 0px;
    padding-top: 5px;
  }
}

.title-container {
  display: flex;
}

.work-in-progress--links,
.work-in-progress--partners,
.work-in-progress--team {
  padding-right: 15px;
}

.work-in-progress--partners-nolinks {
  padding-right: 10%;
  padding-bottom: 20px;
}
/* ... */

